ext/css/action-popup.css
/*
 * Copyright (C) 2023-2024  Yomitan Authors
 * Copyright (C) 2020-2022  Yomichan Authors
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

:root {
    --font-size-no-units: 14;
    --font-size: calc(1px * var(--font-size-no-units));

    --line-height-no-units: 20;
    --line-height: calc(var(--line-height-no-units) / var(--font-size-no-units));

    --badge-size: 16px;

    --warning-color: #96751c;
    --warning-color-light: #edc75e;

    --nav-button-background-image: linear-gradient(#f8f8f8, #e0e0e0);
    --nav-button-border-color: #cccccc;
    --nav-button-background-image-focus: linear-gradient(#e8e8e8, #d0d0d0);
    --nav-button-border-color-focus: #aaaaaa;
    --nav-button-background-image-active-focus: linear-gradient(#c8c8c8, #e0e0e0);
    --nav-button-border-color-active-focus: #808080;
    --nav-button-icon-bg: #333333;
    --background-color: #f8f9fa;
}

:root[data-theme=dark] {
    --nav-button-background-image: linear-gradient(#464646, #444444);
    --nav-button-border-color: #333333;
    --nav-button-background-image-focus: linear-gradient(#171717, #2f2f2f);
    --nav-button-border-color-focus: #555555;
    --nav-button-background-image-active-focus: linear-gradient(#373737, #1f1f1f);
    --nav-button-border-color-active-focus: #7f7f7f;
    --nav-button-icon-bg: #fbfbfb;
    --background-color: #1e1e1e;
}

body {
    padding: 10px;
    margin: 0;
    font-family: 'Segoe UI', Tahoma, sans-serif;
    font-size: var(--font-size);
    width: max-content;
    height: max-content;
    background-color: var(--background-color);
}

h3 {
    margin: 10px 0;
    font-family: inherit;
    font-weight: 500;
    line-height: 1.1;
    font-size: 24px;
    color: inherit;
}
label {
    font-weight: normal;
}

#mini {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}
#full {
    display: none;
}
:root[data-mode=full] #mini {
    display: none;
}
:root[data-mode=full] #full {
    display: initial;
}


/* Icons */
.icon {
    --icon-image: none;
    --icon-size: contain;

    -webkit-mask-repeat: no-repeat;
    -webkit-mask-position: center center;
    -webkit-mask-mode: alpha;
    -webkit-mask-size: var(--icon-size);
    -webkit-mask-image: var(--icon-image);
    mask-repeat: no-repeat;
    mask-position: center center;
    mask-mode: alpha;
    mask-size: var(--icon-size);
    mask-image: var(--icon-image);
}
.icon[data-icon=profile]                 { --icon-image: url(/images/profile.svg); }
.icon[data-icon=cog]                     { --icon-image: url(/images/cog.svg); }
.icon[data-icon=key]                     { --icon-image: url(/images/key.svg); }
.icon[data-icon=magnifying-glass]        { --icon-image: url(/images/magnifying-glass.svg); }
.icon[data-icon=exclamation-point-short] { --icon-image: url(/images/exclamation-point-short.svg); }
.icon[data-icon=question-mark-circle]    { --icon-image: url(/images/question-mark-circle.svg); }


/* Page-specific styles */
.link-group {
    flex-flow: row nowrap;
    align-items: center;
    line-height: 1.5em;
    margin: 0 -10px;
    padding: 0.5em 10px;
    cursor: pointer;
    color: #333;
    text-decoration: none;
    background-color: transparent;
    transition: background-color 0.125s linear 0s;
    max-width: none;
}
.link-group:not([hidden]) {
    display: flex;
}
.link-group:hover,
.link-group:active {
    color: #333;
    text-decoration: none;
}
.link-group:hover>.link-group-label,
.link-group:active>.link-group-label {
    text-decoration: underline;
}
.link-group:hover {
    background-color: rgba(0, 0, 0, 0.05);
}
.link-group:active {
    background-color: rgba(0, 0, 0, 0.1);
}
.link-group-icon {
    width: 26px;
    height: 26px;
    text-align: center;
    vertical-align: middle;
    display: inline-block;
    margin-right: 0.25em;
    background-repeat: no-repeat;
    background-size: contain;
}
.link-group-icon>input {
    margin: 0;
    padding: 0;
}
.link-group-icon[data-icon=chevron] { background-image: url(/images/right-chevron.svg); }
.link-group-icon[data-icon=cog] { background-image: url(/images/cog.svg); }
.link-group-icon[data-icon=key] { background-image: url(/images/key.svg); }
.link-group-icon[data-icon=magnifying-glass] { background-image: url(/images/magnifying-glass.svg); }
.link-group-icon[data-icon=question-mark-circle] { background-image: url(/images/question-mark-circle.svg); }

.link-group-label {
    vertical-align: middle;
}
.link-group-badge {
    margin-left: 0.5em;
}

/* Toggle */
.toggle>input[type=checkbox] {
    width: 0;
    height: 0;
    opacity: 0;
    display: block;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}
.toggle>input[type=checkbox]:not(:checked)~.toggle-group {
    transform: translateX(-50%);
}
.toggle {
    box-sizing: border-box;
    width: 60px;
    height: 34px;
    position: relative;
    overflow: hidden;
    border: 1px solid #245580;
    border-radius: 4px;
    display: inline-block;
}
.toggle-group {
    position: absolute;
    width: 200%;
    left: 0;
    top: 0;
    bottom: 0;
    user-select: none;
}
body[data-loaded=true] .toggle-group {
    transition: transform 0.35s;
}
/* ... */

